name:                kexc
version:             0.1.0.0
synopsis:            Regular Expression Parser Generator
description:         A regular expression parser generator and a compiler for
                     the Kleenex regular expression language.
license:             MIT
license-file:        LICENSE
author:              The KMC authors
maintainer:          dolle@diku.dk
copyright:           The KMC authors
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable kexc
  default-extensions: TemplateHaskell
  main-is:             KMC/Frontend/CLI.hs
  -- other-modules:
  -- other-extensions:
  ghc-options: -O2
               -threaded
--    -fprof-auto
--    "-with-rtsopts=-N -p -s -h -i0.1"
  build-depends:       MissingH >= 1.3
                     , base >=4.6
                     , bytestring >= 0.10.0.2
                     , containers >= 0.5.0.0
                     , filepath >= 1.3.0.2
                     , graphviz >= 2999.17.0.2
                     , hashable >= 1.2.3.1
                     , kmc-regexps-syntax
                     , mtl >= 2.2.1
                     , options >= 1.2.1.1
                     , parsec >= 3.1.8
                     , pretty >= 1.1.1.0
                     , process >= 1.1.0.2
                     , template-haskell
                     , text >= 1.1.0.0
                     , time >= 1.4.2
                     , transformers >= 0.4

                     -- Remove before distributing: Only needed because haskell-mode
                     -- is too stupid to figure out build-depends for the test suite.
                     , Cabal >= 1.22.0.0
                     , QuickCheck >= 2.7.6
                     , deepseq >= 1.3.0.1
                     , parallel >= 3.2.0.4

  hs-source-dirs:      src test/
  default-language:    Haskell2010

test-suite test-kexc
  type:                detailed-0.9
  test-module:         Tests
  other-modules:       KMC.Frontend
                     , KMC.Frontend.Options
                     , KMC.SymbolicSST
                     , KMC.SymbolicSST.ActionSST
                     , KMC.SymbolicFST
                     , KMC.SymbolicFST.Transducer
                     , KMC.SymbolicFST.OracleMachine
                     , KMC.SymbolicFST.ActionMachine
                     , KMC.Determinization
                     , KMC.TreeWriter
                     , KMC.Theories
                     , KMC.Kleenex.Parser
                     , KMC.Kleenex.Syntax
                     , KMC.Kleenex.Desugaring
                     , KMC.Kleenex.Actions
                     , KMC.Util.List
                     , KMC.Util.Coding
                     , KMC.Util.Map
                     , KMC.Util.Heredoc
                     , KMC.Util.UTF8
                     , KMC.RangeSet
                     , KMC.Program.IL
                     , KMC.Program.Backends.C
                     , Tests.TestUtils
                     , Tests.KleenexParser
                     , Tests.Coding
                     , Tests.Regression
  hs-source-dirs:      test src/
  default-language:    Haskell2010
  default-extensions:  TemplateHaskell
  build-depends:       Cabal >= 1.22.0.0 && < 1.23
                     , MissingH >= 1.3
                     , filepath >= 1.3.0.2
                     , options >= 1.2.1
                     , QuickCheck >= 2.7.6
                     , base >=4.6
                     , bytestring >= 0.10.0.2
                     , containers >= 0.5.0.0
                     , deepseq >= 1.3.0.1
                     , parallel >= 3.2.0.4
                     , graphviz >= 2999.17.0.2
                     , hashable >= 1.2.3.1
                     , kmc-regexps-syntax
                     , mtl >= 2.2.1
                     , parsec >= 3.1.8
                     , pretty >= 1.1.1.0
                     , process >= 1.1.0.2
                     , text >= 1.1.0.0
                     , time >= 1.4.2
                     , template-haskell
