name:                kexc
version:             0.1.0.0
synopsis:            Regular Expression Parser Generator
description:         A regular expression parser generator and a compiler for
                     the Kleenex regular expression language.
license:             MIT
license-file:        LICENSE
author:              The KMC authors
maintainer:          dolle@diku.dk
copyright:           The KMC authors
category:            Development
build-type:          Simple
extra-source-files:  README.md
                   , crt/crt.c
cabal-version:       >=1.10

library
  default-extensions: TemplateHaskell
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: src
  build-depends:       MissingH >= 1.3
                     , base >=4.6 && <5
                     , bytestring >= 0.10.0.2
                     , containers >= 0.5.0.0
                     , filepath >= 1.3.0.2
                     , hashable >= 1.2.3.1
                     , kmc-regexps-syntax
                     , mtl >= 2.2.1
                     , graphviz >= 2999.18.0.2
                     , options >= 1.2.1.1
                     , parsec >= 3.1.8
                     , pretty >= 1.1.1.0
                     , process >= 1.1.0.2
                     , template-haskell
                     , text >= 1.1.0.0
                     , time >= 1.4.2
                     , transformers >= 0.4
                     , unordered-containers >= 0.2.7
  exposed-modules: KMC.Determinization
                 , KMC.SymbolicSST
                 , KMC.SymbolicSST.ActionSST
                 , KMC.RangeSet
                 , KMC.Frontend
                 , KMC.Frontend.Options
                 , KMC.Frontend.Commands
                 , KMC.SymbolicFST
                 , KMC.SymbolicFST.OutputEquivalence
                 , KMC.SymbolicFST.OracleMachine
                 , KMC.SymbolicFST.Transducer
                 , KMC.SymbolicFST.Functionalization
                 , KMC.SymbolicFST.ActionMachine
                 , KMC.SSTCompiler
                 , KMC.SSTCompiler.Classes
                 , KMC.SSTCompiler.Env
                 , KMC.Util.List
                 , KMC.Util.UTF8
                 , KMC.Util.Coding
                 , KMC.Util.Heredoc
                 , KMC.Util.Map
                 , KMC.Util.Bits
                 , KMC.Util.Set
                 , KMC.Backtracking
                 , KMC.Kleenex.Approximation
                 , KMC.Kleenex.ApproximationMetrics
                 , KMC.Kleenex.Core
                 , KMC.Kleenex.WellFormedness
                 , KMC.Kleenex.Syntax
                 , KMC.Kleenex.Desugaring
                 , KMC.Kleenex.Parser
                 , KMC.Kleenex.Actions
                 , KMC.TreeWriter
                 , KMC.Program.Backends.C
                 , KMC.Program.IL
                 , KMC.Theories
                 , KMC.Visualization

executable kexc
  default-extensions: TemplateHaskell
  main-is:             src/kexc.hs
  hs-source-dirs:      .
  -- other-modules:
  -- other-extensions:
  ghc-options: -threaded
--    -fprof-auto
--    "-with-rtsopts=-N -p -s -h -i0.1"
  build-depends:       base >=4.6 && <5
                     , mtl >= 2.2.1
                     , options >= 1.2.1.1
                     , kexc
  default-language:    Haskell2010

test-suite test-kexc
  type:                detailed-0.9
  test-module:         Tests
  other-modules:       Tests.TestUtils
                     , Tests.KleenexParser
                     , Tests.Coding
                     , Tests.Regression
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       Cabal >= 1.22.0.0 && < 1.25
                     , QuickCheck >= 2.7.6
                     , base >=4.6 && <5
                     , bytestring >= 0.10.0.2
                     , containers >= 0.5.0.0
                     , deepseq >= 1.3.0.1
                     , parallel >= 3.2.0.4
                     , kmc-regexps-syntax
                     , text >= 1.1.0.0
                     , kexc
