name:                repg
version:             0.1.0.0
synopsis:            Regular Expression Parser Generator
description:         A regular expression parser generator and a compiler for
                     the Kleenex regular expression language.
license:             MIT
license-file:        LICENSE
author:              The KMC authors
maintainer:          dolle@diku.dk
copyright:           The KMC authors
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable repg
  default-extensions: TemplateHaskell
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       MissingH >= 1.3
                     , base >=4.6
                     , bytestring >= 0.10.0.2
                     , containers >= 0.5.0.0
                     , filepath >= 1.3.0.2
                     , free >= 4.9
                     , graphviz >= 2999.17.0.2
                     , kmc-regexps-syntax
                     , mtl >= 2.2.1
                     , options >= 1.2.1.1
                     , parsec >= 3.1.8
                     , pretty >= 1.1.1.0
                     , process >= 1.1.0.2
                     , template-haskell
                     , text >= 1.1.0.0
                     , time >= 1.4.2
                     , transformers >= 0.4.2.0
                     -- Remove before distributing: Only needed because haskell-mode
                     -- is too stupid to figure out build-depends for the test suite.
                     , Cabal >= 1.22.0.0
                     , QuickCheck >= 2.7.6

  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test-repg
  type:                detailed-0.9
  test-module:         Tests
  other-modules:       KMC.Expression
                     , KMC.RangeSet
                     , KMC.OutputTerm
                     , KMC.Coding
                     , KMC.SymbolicSST
                     , KMC.SymbolicFST
                     , KMC.FSTConstruction
                     , KMC.SSTConstruction
                     , KMC.TreeWriter
                     , KMC.Theories
                     , KMC.Kleenex.Parser
                     , KMC.Kleenex.Lang
  hs-source-dirs:      src test
  default-language:    Haskell2010
  default-extensions:  TemplateHaskell
  build-depends:       Cabal >= 1.22.0.0 && < 1.23
                     , QuickCheck >= 2.7.6
                     , base >=4.6
                     , bytestring >= 0.10.4.0
                     , containers >= 0.5.0.0
                     , free >= 4.9
                     , graphviz >= 2999.17.0.2
                     , kmc-regexps-syntax
                     , mtl >= 2.2.1
                     , parsec >= 3.1.8
                     , pretty >= 1.1.1.0
                     , process >= 1.1.0.2
                     , text >= 1.1.0.0
                     , time >= 1.4.2
                     , transformers >= 0.4.2.0
                     , template-haskell
